projects/infra/emqx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emqx
  namespace: kevin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emqx
  template:
    metadata:
      labels:
        app: emqx
    spec:
      containers:
        - name: app
          image: emqx/emqx
          ports:
            - containerPort: 1883
              protocol: TCP
              name: tcp
            - containerPort: 18083
              protocol: TCP
              name: http
