projects/infra/emqx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: emqx-service
  namespace: kevin
spec:
  selector:
    app: emqx
  ports:
    - name: tcp
      port: 1883
      targetPort: 1883
    - name: http
      port: 18083
      targetPort: 18083
