projects/infra/emqx/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mqtt-registry-ingress-secure
  namespace: kevin
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`mqtt.fast.ar`)
    kind: Rule
    services:
    - name: emqx-service
      port: 18083
  tls:
    secretName: mqtt-fast-ar-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mqtt-registry-ingress
  namespace: kevin
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`mqtt.fast.ar`)
    kind: Rule
    services:
    - name: emqx-service
      port: 18083
    middlewares:
    - name: https-redirect
